--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
-    "mineflayer": "^4.30.0"
+    "mineflayer": "^4.30.0",
+    "winston": "^3.17.0"
   }
 }
